fix (tablet) : Filter Text Wrap Issue
Make sure filter texts do not wrap when the screen is getting smaller

--- a/css/style.css
+++ b/css/style.css
@@ -184,6 +184,8 @@ a {
   display: flex;
   align-items: center;
   gap: 15px;
+
+  white-space: nowrap;
 }
 
 #filter-bar .filter {
